# sbom-analysis

./: .gitignore  .gitmodules  .pdm.toml  README.md  index.html  other_tools.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: pyproject-checkpoint.toml
_proc/: 00_core.ipynb  index.ipynb  nbdev.yml  sidebar.yml  spdx_example.ipynb
_proc/_docs/: core.html  index.html  search.json  sitemap.xml  spdx_example.html
ai_specifications/: hugging_face_model_cards.html  spdx3_aipackage.html
figs/: cs1-Microsoft.SBOMTool.relationship_full.html  cs1-tern.relationship_full.html  cs1-trivy.relationship_full.html  cs1-vai.relationship_full.html  fig03.relationship_full.html  fig04.relationship.html  fig06.relationship_full.html
nbs/: 00_core.ipynb  01_minimum_elements.ipynb  01_spdx_example.ipynb  02_frameworks_getting_started.ipynb  03_llama.cpp.ipynb  04_hugging_face.ipynb  05_numpy.ipynb  06_pytorch.ipynb  07_hugging_face_model_cards.ipynb  _quarto.yml  index.ipynb  other_tools.ipynb  sbom_tool_overview.ipynb  sidebar.yml  spdx_example.ipynb  tmp.fig03.html  tmp.fig06.html
nbs/.ipynb_checkpoints/: index-checkpoint.ipynb
nbs/ai_specifications/: SPDX3_AIPackage.ipynb  hugging_face_model_cards.ipynb
nbs/figs/: cs1-fossa.relationship_full.html  cs1-gh-sbom.relationship_full.html  cs1-sbom4python.relationship_full.html  cs1-sbomtool.relationship_full.html  cs1-syft.relationship_full.html  fig01.files.html  fig01.full.html  fig02.files.html  fig02.relationship.html  fig02.relationship_full.html  fig03.relationship.html  (+2 more)
sbom-basic/: core.html  frameworks_getting_started.html  hugging_face.html  llama.cpp.html  microsoft_sbomtool_overview.html  minimum_elements.html  numpy.html  pytorch.html  spdx_example.html
sbom_analysis/: _modidx.py  core.py
sbom_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tool_analysis/: introduction.html  tools_overall_analysis.html
(+82 files in other folders)
