[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/tools-python#egg=spdx-tools",
]

[project]
name = "sbom-analysis"
version = "0.1.0"
description = "Generating knowledge graph visualizations to analyze the performance and coverage of several SBOM generation tools"
authors = [
    {name = "Peter Ainsworth", email = "painswor@nd.edu"},
]
dependencies = [
    "nbdev>=2.3.12",
    "kglab>=0.6.6",
    "jupyter>=1.0.0",
    "pandas>=1.5.3",
    "networkx>=3.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
