[project]
name = "sbom-analysis"
version = "0.1.0"
description = "Generating knowledge graph visualizations to analyze the performance and coverage of several SBOM generation tools"
authors = [
    {name = "Peter Ainsworth", email = "painswor@nd.edu"},
    {name = "Priscila Moreira", email = "pmoreira@nd.edu"},
]
dependencies = [
    "spdx-tools>=0.8.0",
    "kglab>=0.6.6",
    "pandas>=1.5.3",
    "networkx>=3.1",
    "setuptools>=67.8.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "nbformat>=5.9.0", # dev dependencies
    "nbdev>=2.3.12",   # dev dependencies
    "jupyter>=1.0.0",  # dev dependencies
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}